--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,6 +1,9 @@
 <resources>
 
     <color name="apptheme_color">#df2b2a</color>
+    <color name="colorPrimary">#3F4F73</color>
+    <color name="colorPrimaryDark">#273147</color>
+    <color name="textColorPrimary">#FFFFFF</color>
 
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFF</color>
@@ -21,8 +24,10 @@
     <color name="dark_grey">#2B2B2B</color>
     <color name="pinky_red">#DF2B2A</color>
 
+    <color name="white_transparent">#CCFFFFFF</color>
     <color name="yellow_strong">#F8EF64</color>
     <color name="yellow_light">#FCF394</color>
+    <color name="yellow_light_transparent">#CCFCF394</color>
     <color name="grey_blue">#3F4F73</color>
     <color name="grey_light">#56627C</color>
 
