--- a/app/src/main/res/drawable/place_type_background_shape.xml
+++ b/app/src/main/res/drawable/place_type_background_shape.xml
@@ -3,7 +3,10 @@
 
     <item>
         <shape>
-            <solid android:color="@color/yellow_strong" />
+            <solid android:color="@color/white_transparent" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/white" />
             <corners android:radius="@dimen/bu1" />
         </shape>
     </item>
