--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -21,133 +21,150 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:theme="@style/ToolBarStyle"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlay">
+
+                <RelativeLayout
+                    android:id="@+id/settings_button"
+                    android:layout_width="?attr/actionBarSize"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_gravity="right"
+                    android:clickable="true">
+
+                    <ImageView
+                        android:layout_width="@dimen/bu2"
+                        android:layout_height="@dimen/bu2"
+                        android:layout_centerInParent="true"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/settings_button_selector" />
+                </RelativeLayout>
+
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.AppBarLayout>
 
-            <FrameLayout
-                android:id="@+id/camera_preview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+        <FrameLayout
+            android:id="@+id/camera_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-            <include
-                android:id="@+id/place_focus_view"
-                layout="@layout/place_focus_layout"
+        <include
+            android:id="@+id/place_focus_view"
+            layout="@layout/place_focus_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+
+        <RelativeLayout
+            android:id="@+id/place_details_view"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/bu10"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/bu2"
+            android:layout_marginLeft="@dimen/bu5"
+            android:layout_marginRight="@dimen/bu5"
+            android:clickable="true"
+            android:visibility="invisible">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/background_place_details"
+                app:riv_border_color="@color/white"
+                app:riv_border_width="1dp"
+                app:riv_corner_radius="@dimen/bu1" />
+
+            <TextView
+                android:id="@+id/place_name_text"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bu3"
+                android:background="@drawable/place_details_header_shape"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/bu1"
+                android:paddingRight="@dimen/bu1"
+                android:singleLine="true"
+                android:textColor="@color/grey_blue"
+                android:textSize="@dimen/text_size_36px" />
+
+            <ImageView
+                android:id="@+id/place_image"
+                android:layout_width="@dimen/bu7"
+                android:layout_height="@dimen/bu5"
+                android:layout_below="@+id/place_name_text"
+                android:layout_margin="@dimen/bu1" />
+
+            <TextView
+                android:id="@+id/place_address_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true" />
+                android:layout_below="@+id/place_name_text"
+                android:layout_marginRight="@dimen/bu1"
+                android:layout_marginTop="@dimen/bu1"
+                android:layout_toRightOf="@+id/place_image"
+                android:textColor="@color/grey_blue"
+                android:textSize="@dimen/text_size_26px" />
 
-            <RelativeLayout
-                android:id="@+id/place_details_view"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/bu10"
+            <ImageView
+                android:layout_width="@dimen/bu15"
+                android:layout_height="@dimen/bu7"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="@dimen/bu2"
-                android:layout_marginLeft="@dimen/bu5"
-                android:layout_marginRight="@dimen/bu5"
-                android:clickable="true"
-                android:visibility="invisible">
+                android:layout_alignParentRight="true"
+                android:src="@drawable/background_tit" />
 
-                <com.makeramen.roundedimageview.RoundedImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/background_place_details"
-                    app:riv_border_color="@color/white"
-                    app:riv_border_width="1dp"
-                    app:riv_corner_radius="@dimen/bu1" />
+        </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/place_name_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/bu3"
-                    android:background="@drawable/place_details_header_shape"
-                    android:ellipsize="end"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/bu1"
-                    android:paddingRight="@dimen/bu1"
-                    android:singleLine="true"
-                    android:textColor="@color/grey_blue"
-                    android:textSize="@dimen/text_size_36px" />
+        <LinearLayout
+            android:id="@+id/progress_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/semi_transparent_rounded_shape"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="@dimen/bu2"
+            android:visibility="gone">
 
-                <ImageView
-                    android:id="@+id/place_image"
-                    android:layout_width="@dimen/bu7"
-                    android:layout_height="@dimen/bu5"
-                    android:layout_below="@+id/place_name_text"
-                    android:layout_margin="@dimen/bu1" />
-
-                <TextView
-                    android:id="@+id/place_address_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/place_name_text"
-                    android:layout_marginRight="@dimen/bu1"
-                    android:layout_marginTop="@dimen/bu1"
-                    android:layout_toRightOf="@+id/place_image"
-                    android:textColor="@color/grey_blue"
-                    android:textSize="@dimen/text_size_26px" />
-
-                <ImageView
-                    android:layout_width="@dimen/bu15"
-                    android:layout_height="@dimen/bu7"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:src="@drawable/background_tit" />
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:id="@+id/progress_layout"
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:background="@drawable/semi_transparent_rounded_shape"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="@dimen/bu2"
-                android:visibility="gone">
+                android:src="@drawable/progress" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/progress" />
-
-                <TextView
-                    android:id="@+id/progress_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/bu1"
-                    android:textColor="@color/dark_grey"
-                    android:textSize="@dimen/text_size_30px" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/no_landscape_layout"
+            <TextView
+                android:id="@+id/progress_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:background="@drawable/black_transparent_rounded_shape"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="@dimen/bu2"
-                android:visibility="gone">
+                android:layout_marginTop="@dimen/bu1"
+                android:textColor="@color/dark_grey"
+                android:textSize="@dimen/text_size_30px" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/progress" />
+        </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/bu1"
-                    android:text="@string/main_no_landscape_text"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_size_30px" />
+        <LinearLayout
+            android:id="@+id/no_landscape_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/black_transparent_rounded_shape"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="@dimen/bu2"
+            android:visibility="gone">
 
-            </LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/progress" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/bu1"
+                android:text="@string/main_no_landscape_text"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_30px" />
+
+        </LinearLayout>
     </RelativeLayout>
 
     <com.perpedus.android.view.SearchDrawerLayout
