--- a/app/src/main/res/layout/place_details_dialog.xml
+++ b/app/src/main/res/layout/place_details_dialog.xml
@@ -11,6 +11,8 @@
 
 
         <ScrollView
+            android:id="@+id/content_view"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -66,5 +68,13 @@
 
             </LinearLayout>
         </ScrollView>
+
+        <ImageView
+            android:id="@+id/progress_view"
+            android:layout_width="@dimen/bu5"
+            android:src="@drawable/progress"
+            android:scaleType="fitXY"
+            android:layout_centerInParent="true"
+            android:layout_height="@dimen/bu5" />
     </RelativeLayout>
 </RelativeLayout>
