--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,9 +1,6 @@
 <resources>
 
     <color name="apptheme_color">#df2b2a</color>
-    <color name="colorPrimary">#3F4F73</color>
-    <color name="colorPrimaryDark">#273147</color>
-    <color name="textColorPrimary">#FFFFFF</color>
 
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFF</color>
@@ -29,6 +26,7 @@
     <color name="yellow_light">#FCF394</color>
     <color name="yellow_light_transparent">#CCFCF394</color>
     <color name="grey_blue">#3F4F73</color>
+    <color name="grey_blue_dark">#3A4868</color>
     <color name="grey_light">#56627C</color>
 
 </resources>
