--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -65,4 +65,50 @@
         android:layout_height="1dp"
         android:background="@color/grey_blue" />
 
+    <RelativeLayout
+        android:id="@+id/privacy_policy_button"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bu5"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/bu1"
+            android:text="@string/settings_privacy_policy"
+            android:textColor="@color/grey_blue"
+            android:textSize="@dimen/text_size_36px" />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey_blue" />
+
+    <RelativeLayout
+        android:id="@+id/terms_and_conditions_button"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bu5"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/bu1"
+            android:text="@string/settings_terms_and_conditions"
+            android:textColor="@color/grey_blue"
+            android:textSize="@dimen/text_size_36px" />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey_blue" />
+
 </LinearLayout>
