--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -26,6 +26,7 @@
     <color name="yellow_light">#FCF394</color>
     <color name="yellow_light_transparent">#CCFCF394</color>
     <color name="grey_blue">#3F4F73</color>
+    <color name="grey_blue_transparent">#B33F4F73</color>
     <color name="grey_blue_dark">#3A4868</color>
     <color name="grey_light">#56627C</color>
 
