--- a/app/src/main/res/layout/calibrate_sensors_dialog.xml
+++ b/app/src/main/res/layout/calibrate_sensors_dialog.xml
@@ -1,11 +1,48 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
+    android:orientation="vertical"
+    android:background="@drawable/transparent_blue_rounded_shape"
     android:layout_height="wrap_content">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:textSize="@dimen/text_size_30px"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/bu2"
+        android:layout_marginLeft="@dimen/bu2"
+        android:layout_marginRight="@dimen/bu2"
+        android:text="@string/sensors_calibration_description_text"
+        android:layout_height="wrap_content" />
 
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="wrap_content"
+        android:layout_marginTop="@dimen/bu1"
+        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:src="@drawable/animated_gif_calibrate_sensors" />
 
-</RelativeLayout>
+    <CheckBox
+        android:id="@+id/never_show_again_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="@dimen/bu2"
+        android:text="@string/sensors_calibration_never_show_again_text"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/bu1"
+        android:textSize="@dimen/text_size_26px"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/ok_button"
+        android:clickable="true"
+        android:layout_width="wrap_content"
+        android:text="@string/sensors_calibration_ok_button"
+        android:textColor="@color/white"
+        android:paddingLeft="@dimen/bu2"
+        android:paddingRight="@dimen/bu2"
+        android:paddingTop="@dimen/bu1"
+        android:paddingBottom="@dimen/bu2"
+        android:textSize="@dimen/text_size_40px"
+        android:layout_gravity="right"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
