--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -116,57 +116,108 @@
 
         <LinearLayout
             android:id="@+id/progress_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:background="@drawable/transparent_blue_rounded_shape"
+            android:background="@color/black_50"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="@dimen/bu2"
             android:visibility="gone">
 
-            <ImageView
-                android:layout_width="@dimen/bu5"
-                android:layout_height="@dimen/bu5"
-                android:scaleType="fitXY"
-                android:src="@drawable/progress_white" />
+            <RelativeLayout
+                android:id="@+id/loading_layout"
+                android:layout_width="@dimen/bu12"
+                android:layout_height="@dimen/bu12">
+
+                <ImageView
+                    android:id="@+id/loading_icon1"
+                    android:layout_width="@dimen/bu4"
+                    android:layout_height="@dimen/bu4"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_logo" />
+
+                <ImageView
+                    android:id="@+id/loading_icon2"
+                    android:layout_width="@dimen/bu4"
+                    android:layout_height="@dimen/bu4"
+                    android:layout_alignParentRight="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_logo" />
+
+                <ImageView
+                    android:id="@+id/loading_icon3"
+                    android:layout_width="@dimen/bu4"
+                    android:layout_height="@dimen/bu4"
+                    android:layout_alignParentBottom="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_logo" />
+
+                <ImageView
+                    android:id="@+id/loading_icon4"
+                    android:layout_width="@dimen/bu4"
+                    android:layout_height="@dimen/bu4"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_logo" />
+
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/progress_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/bu2"
+                android:layout_marginRight="@dimen/bu2"
+                android:layout_marginTop="@dimen/bu2"
+                android:text="@string/main_retrieving_places_text"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_30px" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/bu2"
+                android:layout_marginRight="@dimen/bu2"
                 android:layout_marginTop="@dimen/bu1"
+                android:text="@string/main_please_wait_text"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_30px" />
 
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/no_landscape_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:background="@drawable/transparent_blue_rounded_shape"
-            android:gravity="center"
+            android:background="@color/black_50"
             android:orientation="vertical"
-            android:padding="@dimen/bu2"
             android:visibility="gone">
 
-            <ImageView
-                android:layout_width="@dimen/bu5"
-                android:layout_height="@dimen/bu5"
-                android:scaleType="fitXY"
-                android:src="@drawable/icon_disabled_white" />
-
-            <TextView
+            <LinearLayout
+                android:id="@+id/no_landscape_inner_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/bu1"
-                android:text="@string/main_no_landscape_text"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_30px" />
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <ImageView
+                    android:layout_width="@dimen/bu15"
+                    android:layout_height="@dimen/bu15"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_landscape" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/bu1"
+                    android:text="@string/main_no_landscape_text"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_30px" />
+            </LinearLayout>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
