--- a/app/src/main/res/drawable/white_rounded_shape.xml
+++ b/app/src/main/res/drawable/white_rounded_shape.xml
@@ -3,8 +3,8 @@
 
     <item>
         <shape>
-            <solid android:color="@color/greyed" />
-            <corners android:radius="16px" />
+            <solid android:color="@color/white" />
+            <corners android:radius="@dimen/bu1" />
         </shape>
     </item>
 
